# IIB_Project

./: .gitignore  README.md  pyproject.toml
docs/: pipeline.md
evaluator/: README.md
evaluator/configs/: ring.py
evaluator/scripts/: demo.py  prepare.py  prepare_inpainted.py  prepare_ring.py  restore.py  test.py  test_ring.py  train.py  train_ring.py  visualise.py
evaluator/src/datasets/: ring.py  seg2tunnel.py
evaluator/src/losses/: losses.py
evaluator/src/metrics/: iou.py
evaluator/src/models/: network.py
evaluator/src/models/gfa_l/: gfa_l_deng2021.py  gfa_l_li2022.py  gfa_l_liu2023.py  gfa_l_ren2022.py
evaluator/src/models/gfa_s/: gfa_s_deng2021.py  gfa_s_li2022.py  gfa_s_liu2022.py  gfa_s_ren2022.py
evaluator/src/models/lfa/: lfa_cheng2023.py  lfa_fan2021.py  lfa_hu2019.py  lfa_jing2022.py  lfa_lin_v1.py  lfa_zhan2023.py  lfa_zhao2021.py
evaluator/src/models/rfa/: rfa_lin_v1.py  rfa_lin_v2.py  rfa_lin_v3.py
inpainter/: README.md  data  data_alt  experiments
inpainter/configs/: seg2tunnel.json  seg2tunnel_pn2.json
inpainter/scripts/: eval_chamfer.py  eval_psnr.py  inpaint.py  render_depth.py  render_rgb.py  train.py  train_pn2.py
inpainter/src/: utils.py
inpainter/src/datasets/: seg2tunnel.py
inpainter/src/models/: encoder.py
inpainter/src/render/: nerf_helpers.py
preprocessing/: README.md
preprocessing/configs/: default.json
preprocessing/scripts/: generate_adaptive.py  generate_random.py  generate_skip_small.py  make_splits.py  normalise.py
preprocessing/src/: __init__.py  camera.py  projection.py
